# rusty-monitor

./: Cargo.toml  LICENSE  README.md  a.html  rusty-monitor.desktop
src/: layout.rs  list_processes.rs  main.rs  style.css
src/graphs/: cpu_grapth.rs  graphts.rs  second_tab.rs
src/info_page/: info_page.rs
src/list_ctl/: list_ctl.rs
src/systemctl/: mod.rs
