[package]
name = "rusty-monitor"
version = "0.9.0"
edition = "2021"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "*", package = "gtk4"  }
sysinfo = "0.28.4"
glib = "*"
strum = "0.24.0"
strum_macros = "0.24.0"
itertools = "0.10.3"
default-env = "0.1"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = "0.16.0"
include_dir = "*"
